Wrapped the header and map around a main element to try to fix the fem accessibility error.

--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,9 @@ html {
 body {
     font-family: 'Rubik', sans-serif;
     text-align: center;
+}
+
+main {
     height: 100vh;
 }
 
